# pdf-tables-to-excel

./: .editorconfig  README.md  main.py  pyproject.toml  requirements.txt
src/pdf_tables_to_excel/: __init__.py  __main__.py
