[project]
name = "pdf-tables-to-excel"
version = "0.1.0"
description = "This program converts tables from a PDF file into an Excel file."
authors = [
    { name = "uniola", email = "5351183+uniola@users.noreply.github.com" }
]
dependencies = [
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.2",
    "flake8>=7.0.0",
    "black>=24.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"pdf-tables-to-excel" = "pdf_tables_to_excel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_tables_to_excel"]
